# Just_Play

./: App.qml  CMakeLists.txt  Halaman_Playlist.qml  Halaman_pemutaran.qml  Icon.qml  Icon_Lines_Horizontal_Decrease_Rectangle_LTR.qml  Icon_Person_Tick.qml  Karaoke_Anytime.qml  Karaoke_Lyric_Sync_Player.qmlproject  README.md  laguTersimpan.json  main.cpp
DesainBaru/: Cover.qml  Halaman_Lagu.qml  Halaman_Notifikasi.qml  Halaman_Utama.qml  Icon_Like.qml  Icon_Watch_History.qml  Login_sign.qml  Splash_screen.qml  Vector_1.qml
LRC/: Bruno Mars_Risk It All.lrc  backstreet boys_shape of my heart.lrc  from the start.lrc  hindia_everythinguare.lrc  info.txt  iris.lrc  kahitna_titiknadir.lrc  one in a million_NeYo  sean kingston_eenie meenie.lrc  topeng.lrc
LogikaCPP/: authmanager.cpp  authmanager.h
LogikaCPP/logika autentikasi/: authmanager.cpp  authmanager.h
LogikaCPP/logika parser/: LrcParser.cpp
LogikaCPP/logika pemutaran/: AudioPlayer.cpp
LogikaCPP/logika playlist/: playlist.cpp  playlist.h
MP3/: info.txt
SimulasiCloud/: data_musik.json
android/: AndroidManifest.xml
android/res/mipmap-anydpi-v26/: ic_launcher.xml
components/: Component_1.qml  Icon_Chevron_Right_Slim_LTR.qml  IsFavorit.qml  IsPause.qml
include/: authmanager.h  datamanager.h  firebasemanager.h
src/: authmanager.cpp  datamanager.cpp  firebasemanager.cpp
ui/: HalamanDiikuti.qml  HalamanKategori.qml  HalamanNotifikasi.qml  HalamanPemutaran.qml  HalamanPlaylist.qml  HalamanSignIn.qml  HalamanUtama.qml  Main.qml  SplashScreen.qml
